-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.4.0
-
None
-
3
-
4276
Alex has reported the following crash:
BUG: unable to handle kernel paging request at 00000000ffffff9d IP: [<ffffffffa0026e11>] ldlm_server_glimpse_ast+0x91/0x3b0 [ptlrpc] [<ffffffffa0001479>] ldlm_work_gl_ast_lock+0x79/0x260 [ptlrpc] [<ffffffffa0042516>] ptlrpc_set_wait+0x76/0x8c0 [ptlrpc] [<ffffffff8105042f>] ? __init_waitqueue_head+0x1f/0x40 [<ffffffffa02286c0>] ? cfs_waitq_init+0x10/0x20 [libcfs] [<ffffffffa0037890>] ? ptlrpc_prep_set+0x160/0x390 [ptlrpc] [<ffffffffa0006b7e>] ldlm_run_ast_work+0x14e/0x450 [ptlrpc] [<ffffffffa0026456>] ldlm_glimpse_locks+0x36/0xf0 [ptlrpc] [<ffffffffa07b1ec4>] filter_intent_policy+0x334/0x810 [obdfilter]
The issue is that filter_intent_policy() should set gl_work.gl_desc to NULL as done in ofd_intent_policy.